--- a/getting-started.Rmd
+++ b/getting-started.Rmd
@@ -2,7 +2,9 @@
 title: "Getting-Started"
 author: "Diana Nurbakova"
 date: '2022-03-06'
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
